--- a/admin/Tpl/default/CommodityList/add.html
+++ b/admin/Tpl/default/CommodityList/add.html
@@ -1,101 +1,188 @@
-{__NOLAYOUT__}
-<div id="AdvertList-add-edit">
-            <table>
-                <caption>添加广告</caption>
-                <tr class="table_tr">
-                    <th class="table_th"><span class="table_star">*</span> 名　　称：</th>
-                    <td><input type="text" name="name" maxlength="15" title="限1-15字符 (必填)" /></td>
-                </tr>
-                <tr><th class="table_th table_th_adjust"><span class="table_star">*</span> 所属分类：</th>
-                    <td>
-                        <select name="pid" class="table_select">
-                            <volist name="clist" id="vo">
-                                <eq name="vo.id" value="$Think.get.pid">
-                                    <option value="<{$vo.id}>" selected="selected"><{$vo.name}></option>
-                                    <else/>
-                                    <option value="<{$vo.id}>"><{$vo.name}></option>
-                                </eq>
-                            </volist>
-                        </select>
-                    </td>
-                </tr>
-                <tr class="table_tr"><th class="table_th"><span class="table_star">*</span> 启　　用：</th>
-                    <td>
-                        <span class="table_radio">
-                            <label><input type="radio" checked="checked" name="publish" value="1" />是</label>
-                            <label><input type="radio" name="publish" value="0" />否</label>
-                        </span>
-                        <span class="table_sort_span">
-                             <span class="table_sort_title"><span class="table_star">*</span> 排　　序：</span>
-                            <input class="table_sort_input" title="值必须在0-255 (必填)" type="text" name="sort" value="99" maxlength="3" />
-                        </span>
-                    </td>
-                </tr>
-                <tr>
-                    <th class="table_th table_th_adjust"><span class="table_star">*</span> 图　　片：</th>
-                    <td class="table_td">
-                        <button id="file_upload_button" type="button">上传</button>
-                        <span class="table_image_tip_size"><{$tip_size}></span>
-                    </td>
-                </tr>
-                <tr class="thumb_image_tr" style="display: none;"><th class="table_th"></th>
-                    <td>
-                        <span class="positioning_image">
-                            <img class="thumb_image" src="__PUBLIC__/images/default.jpg">
-                            <img class="delete_image" src="../Public/images/bullet_cross.png" />
-                            <input type="hidden" name="image" />
-                        </span>
-                    </td>
-                </tr>
-                <tr class="table_tr"><th class="table_th">图片链接：</th><td class="table_td"><input type="text" name="link" title="必须以 http:// 开头 双击可显示 (可为空)" /></td></tr>
-                <tr><th class="table_th_top">描　　述：</th><td><textarea class="textarea" name="description" title="限1-255字符 (可为空)"></textarea></td></tr>
-            </table>
-</div>
+
+<div id="HomeGrownProduct-add-edit">
+
+    <div id="xnfy520-function-index-title">
+        添加商品
+    </div>
+
+
+    <form action="javascript:;" method="POST" name="CommodityList-add">
+        <input type="hidden" name="image" />
+        <input type="hidden" name="pid" value="<{$Think.get.pid}>" />
+        <ul style="margin-top: 10px;">
+            <li class="xnfy520-function-index-add-edit-ul-li">
+                <strong>标　　题：</strong><input type="text" maxlength="50" style="width: 720px;margin: 0 0 0 5px;text-indent: 5px;padding: 2px;" name="name" />　
+            </li>
+            <li class="xnfy520-function-index-add-edit-ul-li" style="margin-top: 2px;">
+                <strong>所属分类：</strong>
+                <select name="pid" style="padding: 2px;margin-left: 0;min-width:50px">
+                    <volist name="clist" id="volist">
+                        <notempty name="Think.get.pid">
+                            <eq name="volist.id" value="$Think.get.pid">
+                                <option selected="selected" value="<{$volist.id}>"><{$volist.name}></option>
+                                <else/>
+                                <option value="<{$volist.id}>"><{$volist.name}></option>
+                            </eq>
+                            <else/>
+                            <option value="<{$volist.id}>"><{$volist.name}></option>
+                        </notempty>
+                    </volist>
+                </select>　
+                <strong>上　　架：</strong>
+                <select name="enable" style="width: 53px;padding: 2px">
+                    <option value="1" selected="selected">是</option>
+                    <option value="0">否</option>
+                </select>　
+                <strong>推　　荐：</strong>
+                <select name="recommend" style="width: 53px;padding: 2px">
+                    <option value="1">是</option>
+                    <option value="0" selected="selected">否</option>
+                </select>
+            </li>
+            <li class="xnfy520-function-index-add-edit-ul-li" style="margin-top: 3px;">
+                <strong>售　　价：</strong>
+                    <input type="text" name="price" value="0" style="width: 47px;text-align: center;height: 18px;" maxlength="8" />　
+                <strong>排　　序：</strong>
+                <input title="值必须在0-255 (必填)" type="text" name="sort" value="99" style="width: 49px;text-align: center;height: 18px;" maxlength="3" />　
+                <strong>商品体积：</strong>
+                <input type="text" name="" value="" style="width: 47px;text-align: center;height: 18px;" maxlength="3" />
+            </li>
+            <li class="xnfy520-function-index-add-edit-ul-li" style="margin-top: 5px;height: 50px;background: #d6fffa;padding: 5px 0;">
+                  <span class="positioning_images" style="float: left;position: relative;margin-left: 8px;width: 50px;height: 50px;display: block;padding-right: 16px;border-right: 1px dashed blue;">
+                        <img class="thumb_image"
+                             style="width:50px;height:50px;cursor: pointer;margin-right: 5px;"
+                             flag="0"
+                             src="__PUBLIC__/images/default.jpg" />
+                        <img class="delete_images" src="../Public/images/bullet_cross.png" style="position: absolute;right: 12px;top:1px;cursor: pointer;display: none;" />
+                    </span>
+                    <span style="margin-left: 7px;float: left;" id="insert_more_image">
+                         <!--<span class="positioning_images_list" style="float: left;position: relative;width: 50px;height: 50px;display: block;padding-right: 16px;">-->
+                            <!--<img class="thumb_image_list"-->
+                                 <!--style="width:50px;height:50px;cursor: pointer;margin-right: 5px;"-->
+                                 <!--flag="0"-->
+                                 <!--src="__PUBLIC__/images/default.jpg" />-->
+                            <!--<img class="delete_images_list" src="../Public/images/bullet_cross.png" style="position: absolute;right: 12px;top:1px;cursor: pointer;display: none;" />-->
+                        <!--</span>-->
+                    </span>
+            </li>
+            <li class="xnfy520-function-index-add-edit-ul-li" style="margin-top: 3px;background: #d6fffa;">
+                <button id="file_upload_button" type="button" style="cursor: pointer;padding:5px 2px;margin-left:4px">封面上传</button>　
+                <button id="file_upload_button_more" type="button" style="cursor: pointer;padding:5px 2px">图片上传</button>　
+                <span style="font-size: 12px;">( 封面或商品请上传高宽比例为1：1的图片，商品图片最多为10张 )</span>
+            </li>
+            <style type="text/css">
+                .switch_textarea{
+                    width:100px;
+                    padding: 5px 10px;
+                    background-color: #ccc;
+                    cursor:pointer;
+                }
+            </style>
+            <li style="height: 25px;line-height: 25px;margin-bottom: 2px;">
+                <span class="switch_textarea" style="background: #546C83;color:white;">描述</span>
+                <span class="switch_textarea">简介</span>
+                <button type="button" style="margin: 0;padding:5px 2px" id="Parameter">送货和退货</button>
+                <button type="button" style="margin: 0;padding:5px 2px" id="Parameter2">产品尺寸</button>
+                <button type="button" style="margin: 0;padding:5px 2px" id="Parameter3">产品详细信息</button>
+
+                <select id="stylist_id" name="stylist_id" style="padding: 2px">
+                    <option value="0" selected="selected">选择设计师</option>
+                    <volist name="stylist" id="vo_s">
+                        <option value="<{$vo_s.id}>"><{$vo_s.name}></option>
+                    </volist>
+                </select>
+                <span class="stylist_say" style="display:none">
+                    <input type="text" maxlength="50" style="width: 385px;margin: 0 0 0 5px;text-indent: 5px;padding: 2px;" name="stylist_say" />　
+                </span>
+            </li>
+            <li class="texli" style="margin-bottom: 10px;">
+                 <textarea class="description" name="description" style="resize: none;position:absolute;visibility: hidden;float: left;"></textarea>
+            </li>
+            <li class="texli" style="margin-bottom: 10px;display: none;">
+                <textarea class="textareas" name="details" style="resize: none;position:absolute;visibility: hidden;float: left;"></textarea>
+            </li>
+           <!--  <li class="xnfy520-function-index-add-edit-ul-li" style="margin-bottom: 3px;">
+                <strong>详　　情：</strong>
+                <span style="font-size: 12px;">( 详情页内图片最大宽度为895px。封面或商品请上传高宽比例为1：1的图片，商品图片最多为10张 )</span>
+            </li>
+            <li>
+                <textarea name="details" style="resize: none;position:absolute;visibility: hidden;"></textarea>
+            </li> -->
+            <li>
+                <input style="margin-left:0;" type="submit" name="" value="添加" />
+            </li>
+            <ul id="wait-insert-parameter" style="display: none;"></ul>
+            <ul id="wait-insert-parameter2" style="display: none;"></ul>
+            <ul id="wait-insert-parameter3" style="display: none;"></ul>
+        </ul>
+    </form>
+    </div>
+
 <script src="__PUBLIC__/js/ajaxupload.3.6.js" type="text/javascript"></script>
+<script type="text/javascript" src="__PUBLIC__/js/kindeditor/kindeditor-min.js"></script>
 <script>
-    $(function(){
-        var file_upload_button = $('#file_upload_button');
-        var newfileType = "image";
-        new AjaxUpload(file_upload_button,{
-            action: define_app_url+'/AdvertList/uploads',
-            name: 'myfile',
-            onSubmit : function(file, ext){
-
-                if(newfileType == "image")
-                {
-                    if (ext && /^(jpg|png|jpeg|gif)$/.test(ext)){
-                        this.setData({
-                            'info': 'Document type for pictures'
-                        });
-                    } else {
-                        jBox.tip('非图像类型文件,请重新上传！', 'error',{ timeout: 1000});
-                        return false;
-                    }
-                }
-
-                this.disable();
-
-                file_upload_button.parents("tr").next("tr").fadeOut('slow');
-                $("[type=submit]").attr("disabled","disabled");
-
-            },
-
-            onComplete: function(file, response){
-                this.enable();
-                var msg = JSON.parse(response);
-                if(msg.status){
-                    file_upload_button.parents("tr").next("tr").find("[type=hidden]").val(msg.filename);
-                    file_upload_button.parents("tr").next("tr").find(".thumb_image").attr('src', define_public_url+"/Content/tmp/"+msg.thumb_filename);
-                    file_upload_button.parents("tr").next("tr").fadeIn('slow');
-                    jBox.tip('上传图片成功！', 'success',{ timeout: 1000,closed:function(){
-                        $("[type=submit]").removeAttr("disabled");
-                    }});
-                }else{
-                    jBox.tip(msg.error, 'error',{ timeout: 1000,closed:function(){
-                        $("[type=submit]").removeAttr("disabled");
-                    }});
-                }
-            }
+    var editor;
+    KindEditor.ready(function(K) {
+        editor = K.create('.description', {
+            newlineTag : 'br',
+            resizeType : 1,
+            allowPreviewEmoticons : false,
+            allowImageUpload : true,
+            width:796,
+            height:300,
+            pasteType : 2,
+            filterMode : false,
+            items :  [
+                'source','justifyleft', 'justifycenter', 'justifyright','justifyfull', 
+                'insertorderedlist','insertunorderedlist',
+                'clearhtml', 'quickformat',
+                'forecolor', 'hilitecolor', 'bold','italic', 'underline', 'strikethrough',
+                'removeformat','emoticons', 'link', 'unlink', 'selectall',  'fullscreen'
+            ]
         });
+        editor2 = K.create('.textareas', {
+            newlineTag : 'br',
+            resizeType : 1,
+            allowPreviewEmoticons : false,
+            allowImageUpload : true,
+            width:796,
+            height:300,
+            pasteType : 2,
+            filterMode : false,
+            items :  [
+                'source','justifyleft', 'justifycenter', 'justifyright','justifyfull', 
+                'insertorderedlist','insertunorderedlist',
+                'clearhtml', 'quickformat',
+                'forecolor', 'hilitecolor', 'bold','italic', 'underline', 'strikethrough',
+                'removeformat','emoticons', 'link', 'unlink', 'selectall',  'fullscreen'
+            ]
+        });
+
+    });
+
+</script>
+<script type="text/javascript">
+    $(function(){
+        $(".switch_textarea").live('click',function(){
+            self = $(this);
+
+            $(".switch_textarea").css("background","#ccc").css("color","#C61A69");
+            self.css("background","#546C83").css("color","white");
+
+            $(".texli").css("display","none");
+
+            $(".texli:eq("+self.index()+")").css("display","block");
+        });
+
+        $("[name=stylist_id]").change(function(){
+            $("[name=stylist_say]").val('');
+            if($(this).val()!=0){
+                $(this).next().css('display','inline-block');
+            }else{
+                $(this).next().css('display','none');
+            }
+
+        });
+
     });
 </script>
