--- a/home/Tpl/default/Member/coupon.html
+++ b/home/Tpl/default/Member/coupon.html
@@ -13,7 +13,7 @@
 
                 <div class="wd">
                     <div id="dd-shpj">
-                    	<div id="dd-hb">红包不能与其他优惠同时使用</div>
+                    	<div id="dd-hb"><!-- 红包不能与其他优惠同时使用 --></div>
                         <ul>
                         	<li>
                             	<a href="#"><img src="../Public/image/hb.jpg" width="137" height="110" /></a>
