--- a/home/Tpl/default/Commodity/details.html
+++ b/home/Tpl/default/Commodity/details.html
@@ -17,12 +17,13 @@
             </ul>
         </div>
         <div id="xm-wuliu">
-       	  <div id="xm-wuliu1">商品价格：<strong>¥13000</strong></div>
-          <div id="xm-wuliu2">已售：<span>200</span>件</div>
+          <input type="hidden" name="commodity" value="<{$data.id}>" />
+       	  <div id="xm-wuliu1">商品价格：<strong>&#165;<{$data.price}></strong></div>
+          <div id="xm-wuliu2">已售：<span><{$data.sales_volume}></span>件</div>
           <div id="xm-wuliu3">
             	<ul>
                     <li>购买数量：</li>
-                    <li style="width:65px;"><input class="dd-input" type="text" value="1" /></li>
+                    <li style="width:65px;"><input id="buy_count" name="quantity" class="dd-input" type="text" value="1" /></li>
                     <li>
                         <a href="javascript:jia();"><img src="../Public/image/12.png" width="18" height="14" /> </a>
                     	<a href="javascript:jian();"><img src="../Public/image/13.png" width="18" height="14" /></a>
@@ -30,12 +31,13 @@
             	</ul>
           </div>
           <div style="clear:both; height:1px;"></div>
-          <div id="xm-flfy"><a href="#">物流费用</a></div>
+          <div id="xm-flfy"><a href="javascript:;" id="view_logistics" pid="<{$data.id}>">物流费用</a></div>
           <div id="xm-flfy1">
-          	<a href="#"><img src="../Public/image/15.png" width="85" height="30" /></a>
-            <a href="#"><img src="../Public/image/16.png" width="85" height="30" /></a>
+          	<img style="cursor:pointer;" id="shop-buy" src="../Public/image/15.png" width="85" height="30" />
+            <img style="cursor:pointer;" id="shop-add-cart" src="../Public/image/16.png" width="85" height="30" />
           </div>
         </div>
+        <span id="p_infos" measure="<{$data.measure}>" price="<{$data.price}>"></span>
     </div>
 
     <div id="xm-crbanner">
@@ -49,7 +51,7 @@
     <div id="xm-zhuti">
     	<ul>
         	<li id="xm-zhuti-left">
-                <empty name="data.VoteDetails">
+                <empty name="data.CommodityDetails">
                     <div style="margin-top:10px">无内容</div>
                 <else/>
                     <volist name="data.CommodityDetails" id="vo_cd">
@@ -129,9 +131,74 @@
           </li>
         </ul>
     </div>
+
+<div id="xj-tanchu1" style="display:none;z-index:9999">
+        <div id="xj-tanchu2">
+            配送方案
+           <a href="javascript:yc();"><img src="../Public/image/44.jpg" /></a>
+        </div>
+        <div id="xj-tanchu3">
+            <div id="xj-tanchu4">
+                配送城市选择：
+                <select id="logistics_province" name="logistics_province">
+                    <option value="0">--请选择--</option>
+                      <volist name="provice_level" id="vo_pl">
+                        <option value="<{$vo_pl.id}>"><{$vo_pl.name}></option>
+                      </volist>
+                </select>
+                <span id="logistics_city"></span>
+                <span id="logistics_county"></span>
+            </div>
+        </div>
+    <div id="xj-tanchu5">
+        <div class="xj-faa xj-faassss"> 请选择要配送到的城市 </div>
+        <div id="show_logistics" style="display:none">
+            <div class="xj-faa"> 通过物流运输至物流提货点，自提货，自安装，物流价起步价<span id="x_qbj">0</span>元。</div>
+            <div class="xj-faa2">共<span id="x_j">1</span>件商品，<span>1</span>件安体积计算运费，包装体积约<span id="x_tj">0.00</span>立方米，参考费用如下：</div>
+            <div class="xj-faa1">
+                <ul id="x_q_list">
+                    <!-- <li class="xj-td1">武昌区&nbsp;444元</li> -->
+                </ul>
+            </div>
+            <div class="m_left80">
+                <strong>此价格为配送至当地提货点的价格，然后下面再给出一个上门安装的另加费用</strong>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script type="text/javascript" src="__PUBLIC__/js/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
 <link rel="stylesheet" type="text/css" href="__PUBLIC__/js/fancybox/jquery.fancybox-1.3.4.css" media="screen" />
 <script type="text/javascript">	
+
+$("#view_logistics").click(function(){
+    xs();
+});
+
+
+function xs(){
+    $("#xj-tanchu1").css({"display":"block"});
+    cz();
+}
+function yc(){
+    $("#xj-tanchu1").css({"display":"none"});
+    $(".xj-faassss").css("display","block");
+    $("#show_logistics").css('display','none');
+    $("#logistics_province").val(0);
+}
+function cz(){
+    var sm=($(window).height()-$("#xj-tanchu1").height())/2;
+    var zm=($(window).width()-$("#xj-tanchu1").width())/2;
+    $("#xj-tanchu1").css({"left":zm,"top":sm});
+    for(var i=1;i<$(".xm-banner dl dd").length;i++){
+        $(".xm-banner dl dd").eq(i).animate({opacity:0},{queue:false,duration:550});
+    }
+}
+$(document).ready(function(e) {
+    cz();
+});
+
+
 $(function(){
 	$(".editinfo").fancybox({
 		'overlayShow'	: true,
