--- a/home/Tpl/default/Index/login.html
+++ b/home/Tpl/default/Index/login.html
@@ -5,19 +5,20 @@
         <div id="xm-denglu">
         	<ul>
            	  <li id="xm-dl-left">
+                <form action="javascript:;" name="login_check" id="login_check">
                 	<div id="xm-dl-left1">用户登录</div>
                     <div id="xm-dl-left2">账号登录</div>
-                	<div class="xm-dl-left3">账&nbsp;&nbsp;号：<input type="text" /></div>
-                    <div class="xm-dl-left3">密&nbsp;&nbsp;码：<input type="password" /></div>
+                	<div class="xm-dl-left3">账&nbsp;&nbsp;号：<input type="text" name="login_name" /></div>
+                    <div class="xm-dl-left3">密&nbsp;&nbsp;码：<input type="password" name="password" /></div>
                     <div id="xm-dl-left4">
                     	<ul>
-                        	<li><input type="checkbox" checked="checked" /></li>
+                        	<li><input type="checkbox" name="remember_me" /></li>
                             <li id="xm-jizhu">记住登录账号</li>
                         </ul>
                     </div>
                 	<div id="xm-dl-left5">
                     	<ul>
-                        	<li><a href="#"><img src="../Public/image/12.jpg" width="102" height="37" /></a></li>
+                        	<li><input type="image" src="../Public/image/12.jpg" width="102" height="37" /></li>
                             <li id="xm-jz"><a href="#">忘记密码?</a></li>
                         </ul>
                     </div>
@@ -25,55 +26,153 @@
                     <div id="xm-zh">使用合作网站账号登录要买家具：</div>
                     <div id="xm-zuo">
                     	<ul>
-                            <li id="xm-qq"><a href="#">腾讯QQ丨</a></li>
-                            <li id="xm-xl"><a href="#">新浪微博</a></li>
+                            <li id="xm-qq"><a href="#">腾讯QQ</a></li>
                         </ul>
                     </div>
+                </form>
               </li>
                 
                 <li id="xm-dl-line"></li>
                 
               	<li id="xm-dl-right">
-                	<div id="xm-dl-right1">注册新用户</div>
-                    <div class="xm-dl-right2">
-                    	<ul>
-                            <li class="xm-dl-right3"><span>*</span> 账&nbsp;&nbsp;&nbsp;&nbsp;号：</li>
-                            <li class="xm-dl-right4"><input type="text" /></li>
-                        </ul>
-                    </div>
-                    <div class="xm-dl-right2">
-                    	<ul>
-                            <li class="xm-dl-right3"><span>*</span> 电子邮箱：</li>
-                            <li class="xm-dl-right4"><input type="text" /></li>
-                        </ul>
-                    </div>
-                    <div class="xm-dl-right2">
-                    	<ul>
-                            <li class="xm-dl-right3"><span>*</span> 设置密码：</li>
-                            <li class="xm-dl-right4"><input type="password" /></li>
-                        </ul>
-                    </div>
-                    <div class="xm-dl-right2">
-                    	<ul>
-                            <li class="xm-dl-right3"><span>*</span> 确认密码：</li>
-                            <li class="xm-dl-right4"><input type="password" /></li>
-                        </ul>
-                    </div>
-                    <div class="xm-dl-right2">
-                    	<ul>
-                            <li class="xm-dl-right3"><span>*</span> 验&nbsp;证&nbsp;码：</li>
-                            <li class="xm-dl-right5"><input type="text" /></li>
-                        </ul>
-                    </div>
-                    <div id="xm-wyyd1">
-                    	<ul>
-                            <li><input type="checkbox" checked="checked" /></li>
-                            <li>&nbsp;<span>我已阅读并同意</span>《要买家具用户注册协议》</li>
-                        </ul>
-                    </div>
-                    <div id="xm-tongy"><a href="#"><img src="../Public/image/29.jpg" width="140" height="37" /></a></div>
+                    <form action="javascript:;" name="signup_check" id="signup_check">
+                    	<div id="xm-dl-right1">注册新用户</div>
+                        <div class="xm-dl-right2">
+                        	<ul>
+                                <li class="xm-dl-right3"><span>*</span> 账&nbsp;&nbsp;&nbsp;&nbsp;号：</li>
+                                <li class="xm-dl-right4"><input type="text" name="username" /></li>
+                            </ul>
+                        </div>
+                        <div class="xm-dl-right2">
+                        	<ul>
+                                <li class="xm-dl-right3"><span>*</span> 电子邮箱：</li>
+                                <li class="xm-dl-right4"><input type="text" name="email" /></li>
+                            </ul>
+                        </div>
+                        <div class="xm-dl-right2">
+                        	<ul>
+                                <li class="xm-dl-right3"><span>*</span> 设置密码：</li>
+                                <li class="xm-dl-right4"><input type="password" name="password" /></li>
+                            </ul>
+                        </div>
+                        <div class="xm-dl-right2">
+                        	<ul>
+                                <li class="xm-dl-right3"><span>*</span> 确认密码：</li>
+                                <li class="xm-dl-right4"><input type="password" name="repassword" /></li>
+                            </ul>
+                        </div>
+                        <div class="xm-dl-right2">
+                        	<ul>
+                                <li class="xm-dl-right3"><span>*</span> 验&nbsp;证&nbsp;码：</li>
+                                <li class="xm-dl-right5"><input type="text" id="insertcode" name="verify" maxlength="4" style="position: absolute;" />
+                                    <img style="height:30px;margin-left:105px" id="click_captcha" src="__APP__/Public/verify" />
+                                </li>
+                            </ul>
+                        </div>
+                        <div id="xm-wyyd1">
+                        	<ul>
+                                <li><input type="checkbox" name="treaty" checked="checked" /></li>
+                                <li>&nbsp;<span>我已阅读并同意</span><a href="__APP__/SupportCenter/index/id/96">《要买家具用户注册协议》</a></li>
+                            </ul>
+                        </div>
+                        <div id="xm-tongy"><input type="image" src="../Public/image/29.jpg" width="140" height="37" /></div>
+                    </form>
                 </li>
             </ul>
         </div>
     </div>
-   
+   <script>
+   $(function(){
+                //AJAX登录验证
+    $("[name=login_check]").live('submit',function(){
+        $("[name=login_check]").find("[type=submit]").attr('disabled','disabled');
+        var data = $(this).serializeArray();
+        var login_name = $("#login_check [name=login_name]");
+        var password = $("#login_check [name=password]");
+        if(login_name.val().length<6){
+            jBox.tip("帐号有误", 'error',{ timeout: 1000,closed: function () { $("[name=login_check]").find("[type=submit]").removeAttr('disabled'); }});
+            return false;
+        }else if(password.val().length<6 || password.val().length>12){
+            jBox.tip("密码不能小于6位，大于12位", 'error',{ timeout: 1000,closed: function () { $("[name=login_check]").find("[type=submit]").removeAttr('disabled'); }});
+            return false;
+        }
+        else{
+                jBox.tip("处理中...", 'loading');
+                window.setTimeout(function (){
+                    $("[name=login_check]").find("[type=submit]").removeAttr('disabled');
+                    $.ajax({
+                        url: define_app_url+'/Member/ajax_login_check',
+                        data: data,
+                        type:'POST',
+                        success: function(data){
+                            var msg = JSON.parse(data);
+                            if(msg.status==1){
+                                jBox.tip(msg.info, 'success',{ timeout: 1000,closed: function () { window.location=msg.data }});
+                            }else{
+                                jBox.tip(msg.info, 'error',{ timeout: 1000,closed: function () {password.val('');verify.val('');$("[name=login_check]").find("[type=submit]").removeAttr('disabled');$("#click_captcha").trigger('click'); }});
+                            }
+                        }
+                    });
+                },500);
+            }
+    });
+
+        //AJAX注册验证
+    $("[name=signup_check]").live('submit',function(){
+        $("[name=signup_check]").find("[type=submit]").attr('disabled','disabled');
+        var data = $(this).serializeArray();
+        var username = $("#signup_check [name=username]");
+        var password = $("#signup_check [name=password]");
+        var repassword = $("#signup_check [name=repassword]");
+        var email = $("#signup_check [name=email]");
+        var verify = $("#signup_check [name=verify]");
+        var treaty = $("#signup_check [name=treaty]");
+        if(username.val().length<6 || username.val().length>12){
+            jBox.tip("帐号不能小于6位，大于12位", 'error',{ timeout: 1000,closed: function () { $("[name=signup_check]").find("[type=submit]").removeAttr('disabled'); }});
+            return false;
+        }else if(!/^[a-zA-Z0-9_]{6,20}$/.test(username.val())){
+            jBox.tip("帐号不能包含符号", 'error',{ timeout: 1000,closed: function () { $("[name=signup_check]").find("[type=submit]").removeAttr('disabled'); }});
+            return false;
+        }else if(password.val().length<6 || password.val().length>12){
+            jBox.tip("密码不能小于6位，大于12位", 'error',{ timeout: 1000,closed: function () { $("[name=signup_check]").find("[type=submit]").removeAttr('disabled'); }});
+            return false;
+        }else if(password.val()!=repassword.val()){
+            jBox.tip("两次输入密码不一致", 'error',{ timeout: 1000,closed: function () { $("[name=signup_check]").find("[type=submit]").removeAttr('disabled'); }});
+            return false;
+        }else if(!/^[\w\d\-\.]+@[\w\d\-\.]+\.[\w]+$/.test(email.val())){
+            jBox.tip("邮件格式不正确", 'error',{ timeout: 1000,closed: function () { $("[name=signup_check]").find("[type=submit]").removeAttr('disabled'); }});
+            return false;
+        }else if(verify.val().length<4){
+            jBox.tip("请输入四位数字验证码", 'error',{ timeout: 1000,closed: function () { $("[name=signup_check]").find("[type=submit]").removeAttr('disabled'); }});
+            return false;
+        }else if(isNaN(verify.val())){
+            jBox.tip("验证码必须是数字", 'error',{ timeout: 1000,closed: function () { $("[name=signup_check]").find("[type=submit]").removeAttr('disabled'); }});
+            return false;
+        }else if(treaty.attr("checked")!='checked'){
+            jBox.tip("请先阅读注册协议", 'error',{ timeout: 1000,closed: function () { $("[type=submit]").removeAttr('disabled'); }});
+            return false;
+        }else{
+            jBox.tip("处理中...", 'loading');
+            window.setTimeout(function () {
+                $("[name=signup_check]").find("[type=submit]").removeAttr('disabled');
+                $.ajax({
+                    url: define_app_url+'/Member/ajax_signup_check',
+                    data: data,
+                    type:'POST',
+                    success: function(data){
+                        var msg = JSON.parse(data);
+                        if(msg.status==1){
+                            jBox.tip(msg.info, 'success',{ timeout: 1000,closed: function () { window.location=msg.data }});
+                        }else{
+                            jBox.tip(msg.info, 'error',{ timeout: 1000,closed: function () { $("[name=signup_check]").find("[type=submit]").removeAttr('disabled'); }});
+                            $("#insertcode").val('');
+                            $("#click_captcha").trigger('click');
+                        }
+                    }
+                });
+            },500);
+        }
+    });
+
+   });
+   </script>
