--- a/home/Tpl/default/Member/password.html
+++ b/home/Tpl/default/Member/password.html
@@ -9,33 +9,44 @@
             	<div class="wdyd">
                	  修改密码
               </div>
-
+              <form action="javascritp:;" name="change_password" id="change_password">
+                <input type="hidden" name="id" value="<{$Userinfo.id}>" />
                 <div class="wd">
                     <div id="dd-shpj">
                     	<div id="dd-xgmm-title">重要提示：每天互联网都会有大量用户的贴存在着严重被盗的风险。如果你正在使用与其他网站相同的密码，建议你尽快修改</div>
                         <table width="100%" height="205" border="0" cellspacing="0" cellpadding="0" style="border-bottom:1px dotted #ccc; margin-top:40px;">
                           <tr>
                             <td width="26%" height="45" align="right" valign="middle">现密码：<br /></td>
-                            <td width="74%" height="45"><input type="password" /></td>
+                            <td width="74%" height="45"><input type="password" name="oldpassword" /></td>
                           </tr>
                           <tr>
                             <td height="45" align="right" valign="middle">新密码：</td>
-                            <td height="45"><input type="password" /></td>
+                            <td height="45"><input type="password" name="newpassword" /></td>
                           </tr>
                           <tr>
                             <td height="45" align="right" valign="middle">确认新密码：</td>
-                            <td height="45"><input type="password" /></td>
+                            <td height="45"><input type="password" name="renewpassword" /></td>
                           </tr>
                           <tr>
                             <td>&nbsp;</td>
-                            <td><input type="image" src="../Public/image/tj.png" />&nbsp;<input type="image" src="../Public/image/cxsr.png" /></td>
+                            <td><input type="image" src="../Public/image/tj.png" />&nbsp;<img id="reset_password" style="cursor:pointer;" src="../Public/image/cxsr.png" /></td>
                           </tr>
                         </table>
                         <div id="dd-xgmm-bottom"><strong>重要提示：</strong><br />
                     	<span>将登录密码设置为8位以上，数字、大小写字母、特殊字符混合型是相对安全的，但通常不方便记性，我们教您一个小窍门：尝试用字母“O”代替数字零等等。同时，我们建议您每隔半年修改一次登录密码。</span>
                     </div>
                     </div>
-                </div>   
+                </div>
+                </form>
             </li>
         </ul>
     </div>
+    <script type="text/javascript">
+    $(function(){
+        $("#reset_password").click(function(){
+          $("#change_password").find("[name=oldpassword]").val('');
+          $("#change_password").find("[name=newpassword]").val('');
+          $("#change_password").find("[name=renewpassword]").val('');
+        });
+    });
+    </script>
